fix: return OS-specific function descriptors for .os files instead of BSL ones
When a global function exists in both BSL and OS contexts with different
descriptions (e.g., Сообщить), hovering in an .os file now shows the
OS-specific description instead of the BSL one.

The fix stores OS-specific function descriptors separately in
osFunctionOverrides map and uses them in findFunction(name, FileType.OS)
and getFunctions(FileType.OS).

Closes #4054